# LD44-youNeedBelievers

./: compile.sh  run.sh
code/: main.cpp  menuState.hpp
code/core/Assets/: TextureManager.cpp  TextureManager.hpp  assetManager.cpp  assetManager.hpp
code/core/Window/: Actor.hpp  Layer.hpp  State.hpp
code/game/: GameState.cpp  GameState.hpp
code/game/Hud/: Action.cpp  Action.hpp  HudMain.cpp  HudMain.hpp
code/game/Hud/Action/: CreateBush.hpp  CreateDefaultGround.hpp  CreateTemple.hpp  deleteDefaultGround.hpp  respawnHuman.hpp
code/game/Player/: PlayerPawn.cpp  PlayerPawn.hpp
code/game/World/: World.cpp  World.hpp
code/game/World/AI/: Human.cpp  Human.hpp  macroFindAfter.h  macroFindPrev.h
code/game/World/Tile/: Tile.cpp  Tile.hpp  TileGround.cpp  TileGround.hpp  TileManager.cpp  TileManager.hpp  TileObject.cpp  TileObject.hpp
code/game/World/Tile/Ground/: Default.hpp
code/game/World/Tile/Object/: FoodGiver.hpp  Temple.hpp
make/: CMakeLists.txt
